--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <!doctype html>
+<html lang="en-US">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Michelle Farr-</title>
